Fix for navbar/gridster spacing
accidentally copied over some wrong styling

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -5,3 +5,7 @@
   left: 0;
   right: 0;
 }
+
+.grid-container {
+  width: auto;
+}
